Fixes alignment of creator name

--- a/core/app/assets/stylesheets/comments/sub_comments.scss
+++ b/core/app/assets/stylesheets/comments/sub_comments.scss
@@ -7,6 +7,7 @@
 .sub-comment-post-creator-name {
   display: inline-block;
   @include ellipsis(200px);
+  vertical-align: top;
 }
 
 .sub-comment-add {
